Website on Mobile css fixes

--- a/Opozee.WebApp/ClientApp/src/app/header/header.component.css
+++ b/Opozee.WebApp/ClientApp/src/app/header/header.component.css
@@ -94,9 +94,9 @@ header .dropdown a {
     }
 
 
-nav.navbar.navbar-default.navbar-fixed-top {
+/*nav.navbar.navbar-default.navbar-fixed-top {
   position:  fixed !important;
-}
+}*/
 
 .navbar-default .navbar-nav > li > a {
   color: #fff;
